# Examen-actuariat

./: fix_imports.py  pyproject.toml
models/: best_model_xgboost.joblib
notebook/: 1.prediction-sinistre.ipynb  1.prediction-sinistre.ipynb:Zone.Identifier
scripts/: train.py
src/examen_actuariat/: __init__.py  data_loading.py  data_processing.py  evaluation.py  exploration.py  features.py  models.py
