[tool.poetry]
name = "examen-actuariat"
version = "0.1.0"
description = "Package examen actuariat"
authors = ["ndeye sophietou gueye <ndeyegueye77@gmail.com>"]
readme = "README.md"
packages = [{include = "examen_actuariat", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# Core data science
pandas = "^2.0.0"
numpy = "^1.24.0"

# Machine Learning
scikit-learn = "^1.3.0"
imbalanced-learn = "^0.11.0"
joblib = "^1.3.0"
xgboost = "^2.0.0"
lightgbm = "^4.0.0"

# Visualization
matplotlib = "^3.7.0"
seaborn = "^0.12.0"

# File handling
openpyxl = "^3.1.0"
packaging = "^23.0"

# Development tools
jupyter = "^1.0.0"
ipykernel = "^6.25.0"
spicy = "^0.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"